...
            
        }
        .frame(width: 320, height:560)
        .background(Color(.systemBackground))
        .clipShape(RoundedRectangle(cornerRadius: 16))
        .shadow(radius: 40)
        .accessibilityIdentifier("breedDetail")
        .overlay(Button{
            isShowingDetail = false
        } label: {
            CloseButtonView()
        }, alignment: .topTrailing)
    }
...
