...
            }
        }) {
            Text("Get random 🐱🔁")
                .frame(minWidth: 0, maxWidth: .infinity)
        }
        .buttonStyle(CustomButton())
        .accessibilityIdentifier("refreshButton")
        .padding(.horizontal, 20)
        .padding(.vertical, 20)
        .background(Color(.systemBackground))
    }
    
    func notificationError(with error: String) -> Alert {
...
