//
//  CatAPIUITests.swift
//  CatAPIUITests
//
//  Created by Jorge Palomino on 13/06/2024.
//

import XCTest

final class CatAPIUITests: XCTestCase {

    override func setUpWithError() throws {
        // Put setup code here. This method is called before the invocation of each test method in the class.

        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }

    override func tearDownWithError() throws {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
    }

    func testExample() throws {
        // UI tests must launch the application that they test.
        let app = XCUIApplication()
        app.launch()

        // Use XCTAssert and related functions to verify your tests produce the correct results.
    }
    
    func testFeed() throws {
        let app = XCUIApplication()
        app.launch()
        let refreshButton = app.buttons["refreshButton"].firstMatch
        XCTAssertTrue(refreshButton.waitForExistence(timeout: 10))
        refreshButton.tap()
        XCTAssertTrue(refreshButton.waitForExistence(timeout: 10))
    }
    
    func testDetail() throws {
        let app = XCUIApplication()
        app.launch()
        let breedButton = app.buttons["breedButton"].firstMatch
        while(!breedButton.exists) {
            let refreshButton = app.buttons["refreshButton"].firstMatch
            refreshButton.tap()
            let delayExpectation = XCTestExpectation()
            delayExpectation.isInverted = true
            wait(for: [delayExpectation], timeout: 1.5)
        }
        breedButton.tap()
        let breedDetail = app.otherElements["breedDetail"]
        XCTAssertTrue(breedDetail.waitForExistence(timeout: 10))
    }

    func testLaunchPerformance() throws {
        if #available(macOS 10.15, iOS 13.0, tvOS 13.0, watchOS 7.0, *) {
            // This measures how long it takes to launch your application.
            measure(metrics: [XCTApplicationLaunchMetric()]) {
                XCUIApplication().launch()
            }
        }
    }
}
